--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/countries.css">
+        
         <title>countries</title>
     </head>
     <body>
         <h1>Countries</h1>
 
-        <script src="lib/jquery-3.7.1.js"></script>
-        <script src="js/countries.js"></script>
+        <script src="lib/axios.js"></script>
+        
+        <script src="js/country.controller.js"></script>
     </body>
 </html>
