Added a country service

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
 
         <script src="lib/axios.js"></script>
         <script src="js/country.controller.js"></script>
+        <script src="js/country.service.js"></script>
     </body>
 </html>
