Add CSS + refactor

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 
         <input type="text" id="countryInput" placeholder="Enter country name">
         <button id="fetchBtn">Fetch Country Info</button>
-        <h2 id="countryName"></h2>
-        <img id="countryFlag" alt="Country Flag"> 
-        <p id="countryPopulation"></p>
-        <p id="countryArea"></p>
-        <pre id="countryData"></pre>
+
+        <div class="country-info">
+            <h2 id="countryName"></h2>
+            <img id="countryFlag" alt="Country Flag">
+            <p id="countryPopulation"></p>
+            <p id="countryArea"></p>
+        </div>
 
         <script src="lib/axios.js"></script>
         <script src="js/country.controller.js"></script>
